refactor password reset with hybrid bcrypt/legacy validation and add session check to inactivity detection